--- a/00_ISP_main_2012.tex
+++ b/00_ISP_main_2012.tex
@@ -4,12 +4,12 @@
 
 \begin{document}
 %--------------------------------------------------------------------------------------------------------------
-\input{01_ISP_title_page.tex}
-\input{02_ISP_admission_and_personalia.tex}
-\input{03_ISP_goal.tex}
-\input{04_ISP_courses.tex}
-\input{05_ISP_academic_thesis.tex}
-\input{06_ISP_supervision.tex}
-\input{99_ISP_end_comment.tex}
+\input{Sections/01_ISP_title_page.tex}
+\input{Sections/02_ISP_admission_and_personalia.tex}
+\input{Sections/03_ISP_goal.tex}
+\input{Sections/04_ISP_courses.tex}
+\input{Sections/05_ISP_academic_thesis.tex}
+\input{Sections/06_ISP_supervision.tex}
+\input{Sections/99_ISP_end_comment.tex}
 
 \end{document}
